erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | DEVELOPER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    GAME {
        INT game_id PK
        INT developer_id FK
        VARCHAR title
        DECIMAL price
        DECIMAL overall_rating
    }
    REVIEW {
        INT review_id PK
        INT game_id FK
        INT user_id FK
        TEXT content
        DATETIME created_at
        VARCHAR attitude "POSITIVE | NEGATIVE"
        VARCHAR status "VISIBLE | HIDDEN | DELETED"
    }
    REVIEW_REPLY {
        INT review_reply_id PK
        INT review_id FK
        INT user_id FK
        INT parent_reply_id FK "nullable"
        TEXT content
        VARCHAR status "VISIBLE | HIDDEN | DELETED"
    }

    USERS ||--o{ REVIEW : writes
    GAME ||--o{ REVIEW : receives
    REVIEW ||--o{ REVIEW_REPLY : has
    USERS ||--o{ REVIEW_REPLY : writes
    REVIEW_REPLY o|--o{ REVIEW_REPLY : parent_of
